# MAS514_H24_group3

./: README.md  dependencies.txt  launch_controller.sh
raspberry_uiabot3/ros2_ws/install/: local_setup.sh  setup.sh
raspberry_uiabot3/ros2_ws/src/robin_SAS/msg/: WheelSpeeds.msg
raspberry_uiabot3/ros2_ws/src/robin_SAS/robin_SAS/: imu_tf_broadcaster.py
roteskuff/: README.md
roteskuff/mas514/: Office_map.data  Office_v2.data  Officev6.yaml  VAB.pgm  of3.data  of333.yaml
roteskuff/mas514/install/: setup.sh
roteskuff/mas514/mas515/: README.md
roteskuff/mas514/mas515/src/robot_description/: package.xml
roteskuff/mas514/src/params/: ekf (Copy).yaml  nav2_params.yaml
roteskuff/mas515/install/: local_setup.sh
roteskuff/mas515/src/odometry/odometry/: odometry_publisher.py
roteskuff/mas515/src/robot_description/rviz/: rviz_config.rviz
roteskuff/raspberry_uiabot3/ros2_ws/install/robin_SAS/share/robin_SAS/: package.dsv  package.xml
roteskuff/raspberry_uiabot3/ros2_ws/src/robin_SAS/: setup.py
src/fromDevPC/: launch_controller.sh
src/fromDevPC/mas515/src/odometry/: setup.py
src/fromDevPC/src/: launch_controller.sh
src/fromDevPC/src/config/: mapper_params_online_sync.yaml
src/fromDevPC/src/params/: nav2_params.yaml
src/fromRaspberryPi/robin_SAS/: CMakeLists.txt  setup.cfg  setup.py
src/fromRaspberryPi/robin_SAS/launch/: robot_launch.py
src/fromRaspberryPi/robin_SAS/robin_SAS/: SubAndSerial.py  teleop_to_serial.py
src/mas514/: Officev6.pgm  Officev666.data  VAB.yaml  VAB_serial.data  of333.pgm
src/mas514/install/: local_setup.sh
src/mas514/log/: latest_build
src/mas514/src/config/: mapper_params_online_sync.yaml
src/mas514/src/params/: ekf.yaml
src/mas515/install/: setup.sh
src/mas515/log/: latest_build
src/mas515/src/robot_description/: CMakeLists.txt
(+45 files in other folders)
