<?xml version="1.0"?>
<package format="3">
  <name>robin_SAS</name>
  <version>0.0.0</version>
  <description>Package to handle teleoperation and wheel speed feedback.</description>
  <maintainer email="uiabot@todo.todo">uiabot</maintainer>
  <license>TODO: License declaration</license>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build and execution dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Additional dependencies -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
